--- a/src/Components/Shared/Navbar/Navbar.css
+++ b/src/Components/Shared/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .main-menuBar{
-    background-color: #ff8f00;
+    background-color: #fda22b;
     box-shadow: 0 5px 10px #adadad;
 }
 .main-menuBrand{
