--- a/src/Components/Home/Services/Services.css
+++ b/src/Components/Home/Services/Services.css
@@ -4,7 +4,7 @@
     padding: 2rem 1rem;
     background: #fff;
     position: relative;
-    box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
+    box-shadow: 0px 7px 10px rgba(114, 112, 112, 0.5);
     transition: 0.5s ease-in-out;
 }
 .service-card:hover{
